[gd_scene load_steps=3 format=3 uid="uid://cskipppyxass2"]

[ext_resource type="Script" path="res://scripts/settings_menu.gd" id="1_x5tdo"]
[ext_resource type="Script" path="res://scripts/volume_slider.gd" id="3_jrjnb"]

[node name="Settings" type="Window"]
size = Vector2i(800, 400)
exclusive = true
unresizable = true
borderless = true
script = ExtResource("1_x5tdo")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="PanelContainer/CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "SETTINGS"
horizontal_alignment = 1

[node name="DisplayOptionContainer" type="HBoxContainer" parent="PanelContainer/CenterContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="PanelContainer/CenterContainer/MarginContainer/VBoxContainer/DisplayOptionContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "DISPLAY MODE"

[node name="DisplayModeButton" type="OptionButton" parent="PanelContainer/CenterContainer/MarginContainer/VBoxContainer/DisplayOptionContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 28
item_count = 2
selected = 0
allow_reselect = true
popup/item_0/text = "WINDOWED"
popup/item_0/id = 0
popup/item_1/text = "FULL SCREEN"
popup/item_1/id = 1

[node name="LanguageContainer" type="HBoxContainer" parent="PanelContainer/CenterContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="PanelContainer/CenterContainer/MarginContainer/VBoxContainer/LanguageContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "LANGUAGE"

[node name="LanguageButton" type="OptionButton" parent="PanelContainer/CenterContainer/MarginContainer/VBoxContainer/LanguageContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 28
item_count = 2
selected = 0
allow_reselect = true
popup/item_0/text = "ENGLISH"
popup/item_0/id = 0
popup/item_1/text = "РУССКИЙ"
popup/item_1/id = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="PanelContainer/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "VOLUME"

[node name="MasterVolumeSlider" type="HSlider" parent="PanelContainer/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
focus_mode = 0
max_value = 1.0
step = 0.001
script = ExtResource("3_jrjnb")

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="PanelContainer/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "GAME SPEED"

[node name="SpeedSlider" type="HSlider" parent="PanelContainer/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
focus_mode = 0
min_value = 0.5
max_value = 2.0
step = 0.001
value = 1.0

[node name="BackButton" type="Button" parent="PanelContainer/CenterContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_override_font_sizes/font_size = 28
text = "BACK"

[connection signal="item_selected" from="PanelContainer/CenterContainer/MarginContainer/VBoxContainer/DisplayOptionContainer/DisplayModeButton" to="." method="_on_display_mode_button_item_selected"]
[connection signal="item_selected" from="PanelContainer/CenterContainer/MarginContainer/VBoxContainer/LanguageContainer/LanguageButton" to="." method="_on_language_button_item_selected"]
[connection signal="value_changed" from="PanelContainer/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer/MasterVolumeSlider" to="PanelContainer/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer/MasterVolumeSlider" method="_on_value_changed"]
[connection signal="value_changed" from="PanelContainer/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer2/SpeedSlider" to="." method="_on_speed_slider_value_changed"]
[connection signal="pressed" from="PanelContainer/CenterContainer/MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
